# ExpandedOthello-AEC

./: .gitignore  README.md  pyproject.toml
expanded_othello/: __init__.py  env.py  evaluate.py  presets.py
expanded_othello/agents/: __init__.py  mcts.py  random.py
expanded_othello/wrappers/: __init__.py  aec.py
