[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "expanded-othello"
version = "0.1.0"
description = "Expanded Othello AI Arena — parametric Othello benchmark with variable board geometry and win conditions (TMLR 2026)"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "numba>=0.57",
    "pettingzoo>=1.24",
    "gymnasium>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["expanded_othello*"]
